[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-weather-demand-analysis"
version = "0.1.0"
description = "Tools for analyzing electricity demand with weather data."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
